# lizardnn

./: .gitignore  .pre-commit-config.yaml  README.md  note.md  optim.py  pyproject.toml  tensor.py
examples/: example_classification.py  example_mlp.py  example_regression.py  example_sequential.py  logisitc_regression.py  mlp.py
lizard/: __init__.py  and.py  tensor.py
lizardnn/: functions.py  layers.py  loss.py  optim.py  tensor.py
tinynn/: and.py  loss.py  optim.py  tensor.py  xor.py
