[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lizardnn"
version = "0.1.0"
description = "A minimal deep learning library built on NumPy for educational purposes"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Adel", email = "adelbennaceur@gmail.com" }]
keywords = ["deep learning", "neural networks", "machine learning", "education"]
dependencies = ["numpy>=1.21.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0", "mypy>=1.0.0", "ruff>=0.1.0"]

[tool.hatch.build.targets.wheel]
packages = ["lizardnn"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
